<resources>
    <string name="app_name">ReduKT</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="logo_name">ReduKT</string>
    <string name="slogan_name">Learning by doing!</string>
    <string name="powered_by">Copyright© 2021 | Team ReduKT</string>


    <!--    strings for dashboard-->

    <!--    categories  -->
    <string name="cse">Cse</string>
    <string name="ece">Ece</string>
    <string name="mech">Mech</string>
    <string name="civil">Civil</string>
    <string name="chemical">Chemical</string>

    <!--  Tiles and descriptions  -->
    <string name="featured_cources">All Featured Courses</string>
    <string name="featured_courses_description">All the courses that are featured and have the top demand!</string>
    <string name="most_viewed_courses">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>


    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="discussion">Discussion</string>
    <string name="all_categories">All Categories</string>
    <string name="add_missing_course">Add Missing Course</string>
    <string name="login">Login</string>
    <string name="profile">My Account</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_learning">My Learning</string>
    <string name="logout">Logout</string>
    <string name="programming">Programming</string>
    <string name="web_design">Web Design</string>
    <string name="shell_scripting">Shell Scripting</string>
    <string name="dbms">DBMS</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>


    <string name="welcome">Create\nAccount</string>

    //otp
    <string name="otp_code_text">Code</string>
    <string name="otp_verification_text">Verification</string>

    //register
    <string name="enter_full_name">Enter your full name</string>

    //password
    <string name="forget_password">Forget password</string>
    <string name="next_btn">Next</string>
    <string name="make_selection">Make selection</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password?</string>
    <string name="via_sms">Via sms:</string>
    <string name="via_mail">Via mail:</string>
    <string name="new_credentials">New credentials</string>
    <string name="new_credentials_detail">Your identity has been verified! Set your new password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_updated">Password updated</string>
    <string name="password_updated_success_message">Your password has been updated!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  strings for personal info  -->
    <string name="basic_info">Basic info</string>
    <string name="contact_info">Contact info</string>
    <string name="photo">PHOTO</string>
    <string name="photo_desc">A photo helps personalize your account</string>
    <string name="name">NAME</string>
    <string name="change_your_name">Update your name</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">GENDER</string>
    <string name="your_gender">Update Gender</string>
    <string name="password">PASSWORD</string>
    <string name="change_password">Update Password</string>
    <string name="email">EMAIL</string>
    <string name="contact_email">Update Email</string>
    <string name="contact_email_desc">Choose the email address where you want to get information about most of the ReduKT courses you learn with this account.</string>
    <string name="phone">PHONE</string>
    <string name="phone_number">Update Number</string>
    <string name="phone_number_desc">Enter the number you would like to use</string>
    <string name="basic_info_desc">Some of your info will be visible to other users of ReduKT</string>
    <string name="my_account">My Account</string>
    <string name="name_desc">Changes to your name will be reflected across your ReduKT Account.</string>
    <string name="dob_desc">Changes to your date of birth will be reflected across your ReduKT Account.</string>
    <string name="pass_desc1">Choose a strong password and do not reuse it for other accounts.</string>
    <string name="pass_desc2">Changing your password will sign you out on your devices, with some exceptions</string>
    <string name="gender_desc">Changes to your gender will be reflected across your ReduKT Account.</string>
    <string name="pass_desc3">Use at least 8 characters. Do not use a password from another site, or something too obvious like your pet name.</string>
    <string name="change_name">CHANGE NAME</string>
    <string name="title_activity_my_account_birthday">MyAccountBirthday</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mail_recover">An account is created with your email for the action of your recent register task in our app. But you cannot use your account, because no personal info is uploaded. To create another account using this email, first you should recover this email.</string>
    <string name="mail_recovertext">To recover your email, please provide the password which you have used to create your account.</string>
    <string-array name="topics">
        <item>select branch</item>
        <item>Cse</item>
        <item>Ece</item>
        <item>Mech</item>
        <item>Civil</item>
        <item>Chemical</item>
    </string-array>

    <string-array name="choice">
        <item>Abusive/Harassment</item>
        <item>content is spam</item>
        <item>Insincere</item>
        <item>Violates post policy</item>
    </string-array>


</resources>
