<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    tools:context=".User.ForgetPassword.SetNewPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToHomeFromSetNewPassword"
                android:padding="5dp"
                android:src="@drawable/outline_arrow_back_black_36"
                app:tint="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/set_new_password_icon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/update_new_password_icon" />

                <TextView
                    android:id="@+id/set_new_password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/muli_black"
                    android:gravity="center"
                    android:text="@string/new_credentials"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/set_new_password_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/muli"
                    android:gravity="center"
                    android:text="@string/new_credentials_detail"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    app:endIconMode="password_toggle">

                    <EditText
                        android:id="@+id/editTextPaswword"
                        style="@style/modifiedEditText"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputConfirmPassword"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    app:endIconMode="password_toggle">

                    <EditText
                        android:id="@+id/editTextConfirmPaswword"
                        style="@style/modifiedEditText"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/set_new_password_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/button_blue"
                    android:onClick="setNewPasswordBtn"
                    android:text="Update"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</RelativeLayout>