<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    tools:context=".User.ForgetPassword.ForgetPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget_password_back_btn"
        android:onClick="callBackScreenFromForgetPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/outline_arrow_back_black_36"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:id="@+id/forget_password_icon"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/forget_password" />

            <TextView
                android:id="@+id/forget_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli_black"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/forget_password"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/forget_password_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli"
                android:gravity="center"
                android:text="Provide your account's email for which you want to reset your password!"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forget_password_email"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/forget_password_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/button_blue"
                android:onClick="verifyPhoneNumber"
                android:text="@string/next_btn"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>